--- a/clickygame/src/index.css
+++ b/clickygame/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.card {
+  margin: 10px;
+}
+
+.card-image {
+  width: 250px;
+  height: auto;
+}
+
+.card-image:hover {
+  cursor: pointer;
+  background-color: #b3ffec;
+}
+
+#main-content {
+  margin-top: 80px;
+}
